# eloquentdb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
conf/: ds.cnf  eloqsql.cnf
src/: glog_error_logging.h  main.cpp
